# ibora-mobi

./: .gitignore  docker-compose.yml  efi-ibora-mobi-test.p12.p12  package-lock.json
backend/: .dockerignore  .env.docker  BLUEPRINT-TECNICO.md  Dockerfile  F-G-LEDGER-FINANCEIRO-PAYOUT.md  H-I-EVENTOS-API.md  INSTRUCAO.md  J-K-OBSERVABILIDADE-ROADMAP.md  Makefile  PROGRESSO.md  PROMPT-2.md  PROMPT.md  alembic.ini  cert.p12  docker-compose.yml  efi-cert.pem  output.txt  pyproject.toml  requirements.txt  simulation_Integration_output_v10.txt  simulation_Integration_output_v11.txt  simulation_Integration_output_v12.txt  simulation_Integration_output_v13.txt  simulation_Integration_output_v14.txt  simulation_Integration_output_v18.txt  simulation_Integration_output_v20.txt  simulation_Integration_output_v8.txt  simulation_output.txt  verify_output.txt
backend/app/: main.py
backend/blueprint/: 00-ANALISE-REPOSITORIOS.md  A-B-C-MODELO-DOMINIO.md  A-K.md  D-ACCEPT-RIDE-TRANSACIONAL.md  E-PIX-WEBHOOK-TRANSACIONAL.md  ETAPA-EXTRA-INCENTIVOS-FIDELIDADE.md  IA PARA GERAR LAYOUT - REACT.txt  INSTRUCAO.md  J-K-OBSERVABILIDADE-ROADMAP.md  PROMPT_MASTER_MOBILIDADE.md
backend/migrations/: env.py
backend/scripts/: cancel_pending_pix.py  check_rabbit.py  check_user.py  debug_config.py  debug_efi_auth.py  debug_env.py  deposit_funds.py  fix_alembic.py  get_driver_credentials.py  get_test_tokens.py  list_pix_keys.py  patch_schema.py  seed_drivers.py  seed_passenger.py  simulate_matching_scenario.py  simulate_ride.py  test_card_payment_flow.py  test_commission_discount.py  test_concurrency.py  test_efi_client_mock.py  test_efi_sandbox.py  test_gps_tracking.py  test_incentive.py  test_mercadopago_api.py  test_mercadopago_flow.py  test_mercadopago_real.py  test_mercadopago_webhook.py  test_payment.py  test_payout_api.py  test_payout_integration.py  test_ride_arriving.py  test_stripe_integration.py  verify_auth_manual.py  verify_cash_payment.py  verify_financial_flow.py  verify_ledger.py  verify_pix_payment.py  verify_pix_real.py  verify_polling.py  verify_ride_payment.py  (+3 more)
backend/tests/: test_webhook_pix.py
(+252 files in other folders)
